services/media/bazarr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
spec:
  selector:
    app.kubernetes.io/instance: bazarr
    app.kubernetes.io/name: bazarr
  type: ClusterIP
  ports:
    - name: webui
      protocol: TCP
      port: 80
      targetPort: webui
